# screen-mirror

./: .gitignore  ANDROID_SERVER.md  Cargo.toml  FFMPEG_BUILD_ISSUES.md  HOTSPOT_MODE_TH.md  INSTALL_CROSSPLATFORM.md  LICENSE  PROJECT_COMPLETE.md  README.md  TESTING.md  USAGE_SETTINGS.md  USAGE_TH.md  config.example.toml  integration_test.sh  test.ps1  test.sh
android-server/: README.md
android-server/app/: build.gradle
android-server/app/src/main/: AndroidManifest.xml
android-server/app/src/main/java/com/scrcpy/custom/server/: MainActivity.java  NetworkUtils.java
android-server/app/src/main/java/com/scrcpy/custom/server/encoder/: VideoEncoder.java
android-server/app/src/main/java/com/scrcpy/custom/server/network/: NetworkStreamer.java
android-server/app/src/main/java/com/scrcpy/custom/server/service/: ScreenCaptureService.java
android-server/app/src/main/res/layout/: activity_main.xml
android-server/app/src/main/res/values/: strings.xml
scripts/: setup_ffmpeg_pc.ps1
src/: assets.rs  config.rs  lib.rs  main.rs  server.rs
src/audio/: decoder.rs  mod.rs  player.rs
src/control/: bitrate.rs  mod.rs
src/network/: fec.rs  mod.rs  negotiation.rs  protocol.rs  quic.rs  tcp.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/sync/: mod.rs
src/ui/: logger.rs  mod.rs  overlay.rs
src/video/: decoder.rs  mod.rs  renderer.rs
src/video/shaders/: video.wgsl
