[package]
name = "scrcpy-custom"
version = "0.1.0"
edition = "2021"
authors = ["scrcpy-custom contributors"]
description = "Ultra-low latency screen mirroring application"
license = "MIT"

[dependencies]
# --- High Performance Allocator ---
mimalloc = { version = "0.1", default-features = false }

# --- Networking ---
tokio = { version = "1.35", features = [
	"full",
	"rt-multi-thread",
	"parking_lot",
] }

futures = "0.3"
async-trait = "0.1"
quinn = "0.11"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = [
	"logging",
	"std",
	"tls12",
	"ring",
] }

# --- Graphics & Video ---
winit = { version = "0.30.5", features = ["rwh_06", "x11", "wayland"] }
wgpu = "22.1"
pollster = "0.3"
raw-window-handle = "0.6"
bytemuck = { version = "1.14", features = ["derive"] }

# --- Audio Decoding ---
audiopus = "0.2"
symphonia = { version = "0.5.3", features = ["all"] }
rb = "0.4"

# --- GUI Overlay ---
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"

# --- Audio ---
cpal = "0.16"
# rubato = "0.14" 

# --- Serialization & Utils ---
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"
anyhow = "1.0"
thiserror = "2.0"
crossbeam = "0.8"
parking_lot = "0.12"
reed-solomon-erasure = "6.0"

# --- Logging & Profiling ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
indicatif = "0.17"
tracing-indicatif = "0.3"
console = "0.15"
# tracing-tracy = "0.10" 

clap = { version = "4.4", features = ["derive"] }

# ==========================================
# Windows Specific
# ==========================================
[target.'cfg(target_os = "windows")'.dependencies]
ffmpeg-next = { version = "6.1", default-features = false, features = [
	"codec",
	"format",
	"software-scaling",
] }

# ==========================================
# Linux Specific
# ==========================================
[target.'cfg(target_os = "linux")'.dependencies]
ffmpeg-next = "6.1"

# ==========================================
# Build Profiles (Tuned for Speed)
# ==========================================
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 1
debug = true
